--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "less": "^3.0.1",
+    "less-loader": "^4.1.0",
     "nightwatch": "^0.9.12",
     "node-sass": "^4.5.3",
     "opn": "^5.1.0",
