--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "test": "npm run e2e"
   },
   "dependencies": {
-    "echarts": "^3.6.2",
+    "echarts": "^3.8.5",
     "inmap": "^1.2.2",
     "iview": "^2.7.3",
     "leaflet": "^1.2.0",
     "mapbox-gl": "^0.41.0",
+    "v-charts": "^1.16.17",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0",
     "vuex": "^2.3.1"
