--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "iview-loader": "^1.1.0",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
     "nightwatch": "^0.9.12",
